--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,12 +75,14 @@ on_success:
         # GET /repos/:owner/:repo/releases/latest
         # see https://developer.github.com/v3/repos/releases/#get-the-latest-release
         #
-        $latest = (Invoke-WebRequest -Uri "$releases_url/latest" -Headers $h).Content | ConvertFrom-Json
+        $latest = (Invoke-WebRequest -Uri "$releases_url/latest" -Headers $h -Method GET).Content | ConvertFrom-Json
         if (! ($latest.tag_name -match "^v(?<major>0|[1-9]\d*)\.(?<minor>[0|1-9]\d*)\.(?<patch>[0|1-9]\d*)$") ) {
           # partially based on https://semver.org/
           # must be v + major.minor.patch
           throw "Bad tag"
         }
+
+        # Note: draft is set to true so that no notifications are sent yet
 
         # create release
         # POST /repos/:owner/:repo/releases
@@ -111,7 +113,19 @@ on_success:
         $bytes = [System.IO.File]::ReadAllBytes("$env:APPVEYOR_BUILD_FOLDER\libs.zip")
         $upload = Invoke-WebRequest -Uri $upload_uri -Headers $h -Method POST -Body $bytes
 
+        # Note: draft is now set to false so that notifications are sent with the correct list of assets
+
+        # update release
+        # PATCH /repos/:owner/:repo/releases/:release_id
+        # see https://developer.github.com/v3/repos/releases/#edit-a-release
+        #
+        $release_id = ($release.Content | ConvertFrom-Json).id
+        $h.Remove("Content-type")
+        $update = @{ "draft" = $false }
+        $update_json = $edit | ConvertTo-Json
+        $release = Invoke-WebRequest -Uri "$releases_url/$release_id" -Headers $h -Method PATCH -Body $update_json
+
         # display download url
-        Write-Output "$(($upload.Content | ConvertFrom-Json).browser_download_url)"
+        Write-Output "$((($release.Content | ConvertFrom-Json).assets).browser_download_url)"
         Get-FileHash .\libs.zip
       }
